fix: add default spacing below feature card

--- a/packages/gatsby-theme-carbon/src/components/FeatureCard/feature-card.scss
+++ b/packages/gatsby-theme-carbon/src/components/FeatureCard/feature-card.scss
@@ -1,5 +1,6 @@
 .#{$prefix}--feature-card {
   position: relative;
+  margin-bottom: $spacing-05;
 }
 
 .#{$prefix}--feature-card__row {
